objects/AcctSeed__Cash_Receipt__c.object
<CustomObject>
    <description>Used to document the money received from a customer. Typically matched to billing invoices in the cash application process to denote satisfactory payment of billing invoice by customer.</description>
    <fields>
        <fullName>AcctSeed__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Filtered Look up to Salesforce account based on Accounting Status Field.</inlineHelpText>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Type__c</field>
                <operation>equals</operation>
                <value>Customer, Customer and Vendor</value>
            </filterItems>
            <filterItems>
                <field>Account.AcctSeed__Accounting_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to specify accounting period for financial reporting. Accounting period must have a value of Open.</inlineHelpText>
        <label>Accounting  Period</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Period__c.AcctSeed__Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <infoMessage>The accounting period status must be open</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Year__c</fullName>
        <formula>LEFT(  AcctSeed__Accounting_Period__r.Name  ,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <inlineHelpText>The amount of money received in a check or electronic deposit.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Applied_Amount__c</fullName>
        <inlineHelpText>The amount of the cash receipt that has been specifically allocated to customer billings.</inlineHelpText>
        <label>Applied Amount</label>
        <summarizedField>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Applied_Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Cash_Receipt__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Balance__c</fullName>
        <formula>AcctSeed__Amount__c - AcctSeed__Applied_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Cash Receipt Amount minus Applied amount.</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Upon posting a debit entry will be made to this account and a corresponding credit entry will be made to the AR Control account set in the Accounting Settings Tab.</inlineHelpText>
        <label>Bank Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Bank__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Deposit</label>
        <referenceTo>AcctSeed__Bank_Deposit__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Id__c</fullName>
        <externalId>true</externalId>
        <label>Bank Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Reconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The associated bank reconciliation this cash receipt was cleared.</inlineHelpText>
        <label>Bank Reconciliation</label>
        <referenceTo>AcctSeed__Bank_Reconciliation2__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Transaction</label>
        <referenceTo>AcctSeed__Bank_Transaction__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_Flow_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to categorize records in Cash Flow Statement.</inlineHelpText>
        <label>Cash Flow Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Cash Flow</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Cash Receipts (Cash Flow Category)</relationshipLabel>
        <relationshipName>Cash_Receipts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cleared_Date__c</fullName>
        <inlineHelpText>The date this cash receipt was cleared in the associated bank reconciliation.</inlineHelpText>
        <label>Cleared Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Credit_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the purpose is Customer Receipt or Customer Prepayment then the credit will always be to the AR Control GL Account. For purposes other than these two the user can elect which GL account to credit when posting here.</inlineHelpText>
        <label>Credit GL Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Expense</value>
            </filterItems>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Balance Sheet</value>
            </filterItems>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Revenue</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Cash Receipts (Credit GL Account)</relationshipLabel>
        <relationshipName>Cash_Receipts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Currency_Conversion_Rate__c</fullName>
        <inlineHelpText>The currency conversion rate for the currency.</inlineHelpText>
        <label>Currency Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Accounting Variable must have a Type of GL Account Variable 1.</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Accounting Variable must have a Type of GL Account Variable 2.</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Cash Receipts (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Cash_Receipts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <infoMessage>The Accounting Variable must have a Type of GL Account Variable 3.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Cash Receipts (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Cash_Receipts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger_Amount__c</fullName>
        <formula>IF(ISBLANK(AcctSeed__Currency_Conversion_Rate__c) || AcctSeed__Currency_Conversion_Rate__c = 0,AcctSeed__Amount__c,AcctSeed__Amount__c/AcctSeed__Currency_Conversion_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The amount normalized to the base currency. This is Amount divided by the Currency Conversion Rate.</inlineHelpText>
        <label>Ledger Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Number_of_Billing_Cash_Receipts__c</fullName>
        <label>Billings Applied To</label>
        <summaryForeignKey>AcctSeed__Billing_Cash_Receipt__c.AcctSeed__Cash_Receipt__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payment_Reference__c</fullName>
        <inlineHelpText>Customer check number or electronic transaction reference to be used in working through collection issues with your customers. This should be a number that is referenced in their system or by a bank</inlineHelpText>
        <label>Reference</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeed__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Cash Receipts</relationshipLabel>
        <relationshipName>Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Purpose__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Receipt</fullName>
                    <default>true</default>
                    <label>Customer Receipt</label>
                </value>
                <value>
                    <fullName>Customer Prepayment</fullName>
                </value>
                <value>
                    <fullName>Vendor Refund</fullName>
                </value>
                <value>
                    <fullName>Other Receipt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Receipt_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Receipt Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>A value of &quot;Posted&quot; indicates the record is final and a debit and credit line have been entered into the transaction object for the Cash Receipt.</inlineHelpText>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <description>used with roll up helper to pull project on related billing</description>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cash Receipt</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Receipt_Date__c</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Payment_Reference__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Purpose__c</columns>
        <columns>AcctSeed__Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Posted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Receipt_Date__c</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Payment_Reference__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Purpose__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Posted</value>
        </filters>
        <label>Posted</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Unapplied</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Applied_Amount__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <columns>AcctSeed__Bank_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Balance__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>Unapplied</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Unposted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Account__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Applied_Amount__c</columns>
        <columns>AcctSeed__Balance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>notEqual</operation>
            <value>Posted</value>
        </filters>
        <label>Unposted</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Cash Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Accounting_Period_Open_New_Record</fullName>
        <active>true</active>
        <description>The accounting period must be open to create a record</description>
        <errorConditionFormula>ISNEW() &amp;&amp; !ISBLANK(AcctSeed__Accounting_Period__c) &amp;&amp; TEXT( AcctSeed__Accounting_Period__r.AcctSeed__Status__c) != &quot;Open&quot;</errorConditionFormula>
        <errorDisplayField>AcctSeed__Accounting_Period__c</errorDisplayField>
        <errorMessage>The accounting period must be open to create a record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Balance_Must_Be_Positive</fullName>
        <active>true</active>
        <description>The balance must always greater than 0</description>
        <errorConditionFormula>ROUND(AcctSeed__Balance__c,2) &lt; 0</errorConditionFormula>
        <errorMessage>The cash receipt balance cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Cannot_Edit_If_Billing_Cash_Receipts</fullName>
        <active>true</active>
        <description>Prevent editing record if the cash receipt has been applied to a billing</description>
        <errorConditionFormula>AcctSeed__Number_of_Billing_Cash_Receipts__c &gt; 0 &amp;&amp; (ISCHANGED(AcctSeed__Amount__c) || ISCHANGED(AcctSeed__Account__c))</errorConditionFormula>
        <errorMessage>You cannot edit the amount or vendor for a cash receipt that has been applied to a billing. In order to edit delete any associated billing cash receipt records.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Cash_Receipt_Can_Not_be_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>AcctSeed__Amount__c &lt;0</errorConditionFormula>
        <errorDisplayField>AcctSeed__Amount__c</errorDisplayField>
        <errorMessage>A cash receipt can not be for a negative amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__GL_Account_Variable_3_Correct_Type</fullName>
        <active>true</active>
        <description>Ensures the GL Account Variable 3 field is of type GL Account Variable 3</description>
        <errorConditionFormula>NOT(ISBLANK( AcctSeed__GL_Account_Variable_3__c )) &amp;&amp; TEXT(AcctSeed__GL_Account_Variable_3__r.AcctSeed__Type__c) != &quot;GL Account Variable 3&quot;</errorConditionFormula>
        <errorDisplayField>AcctSeed__GL_Account_Variable_3__c</errorDisplayField>
        <errorMessage>The Accounting Variable must have a Type of &quot;GL Account Variable 3&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__GL_Account_Variable_4_Correct_Type</fullName>
        <active>true</active>
        <description>Ensures the GL Account Variable 4 field is of type GL Account Variable 4</description>
        <errorConditionFormula>NOT(ISBLANK( AcctSeed__GL_Account_Variable_4__c )) &amp;&amp; TEXT(AcctSeed__GL_Account_Variable_4__r.AcctSeed__Type__c) != &quot;GL Account Variable 4&quot;</errorConditionFormula>
        <errorDisplayField>AcctSeed__GL_Account_Variable_4__c</errorDisplayField>
        <errorMessage>The Accounting Variable must have a Type of &quot;GL Account Variable 4&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Project_Task_Required_With_Project</fullName>
        <active>true</active>
        <description>Rule ensures a Project Task is Required if the Project field is used.</description>
        <errorConditionFormula>NOT(ISBLANK(AcctSeed__Project__c)) &amp;&amp; ISBLANK(AcctSeed__Project_Task__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Project_Task__c</errorDisplayField>
        <errorMessage>A project task is required if a project is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Value_for_Accounting_Period</fullName>
        <active>true</active>
        <description>Verifies accounting period field is not blank.</description>
        <errorConditionFormula>ISBLANK( AcctSeed__Accounting_Period__c )</errorConditionFormula>
        <errorDisplayField>AcctSeed__Accounting_Period__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Value_for_Amount</fullName>
        <active>true</active>
        <description>Verifies amount field is not blank.</description>
        <errorConditionFormula>ISBLANK( AcctSeed__Amount__c )</errorConditionFormula>
        <errorDisplayField>AcctSeed__Amount__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Value_for_Bank_Account</fullName>
        <active>true</active>
        <description>Verifies bank account field is not blank.</description>
        <errorConditionFormula>ISBLANK( AcctSeed__Bank_Account__c )</errorConditionFormula>
        <errorDisplayField>AcctSeed__Bank_Account__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Value_for_Payment_Reference</fullName>
        <active>true</active>
        <description>Verifies payment reference field is not blank.</description>
        <errorConditionFormula>ISBLANK( AcctSeed__Payment_Reference__c )</errorConditionFormula>
        <errorDisplayField>AcctSeed__Payment_Reference__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Value_for_Receipt_Date</fullName>
        <active>true</active>
        <description>Verifies receipt date field is not blank.</description>
        <errorConditionFormula>ISBLANK( AcctSeed__Receipt_Date__c )</errorConditionFormula>
        <errorDisplayField>AcctSeed__Receipt_Date__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>